# PerfProgrammingPrimerExamples

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  Examples.cpp  HoistingSamples.cpp  Profiler.h  RepetitionTester.h  movs.asm
